--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
+    "dompurify": "^2.4.0",
+    "draft-convert": "^2.1.13",
     "formik": "^2.2.9",
+    "framer-motion": "^7.5.3",
+    "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-icons": "^4.4.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
-<<<<<<< HEAD
-    "react-scripts": "5.0.1",
-    "react-use": "^17.4.0",
-=======
     "react-scripts": "^5.0.1",
->>>>>>> 5424ffd30434ebd79d1e5ebc1777e1405236e6a9
+    "react-use": "^17.4.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
